--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 				<img src="images/h1.jpg" alt="Reebok Shoes" />
 				<img src="images/h2.jpg" alt="Reebok Shoes" />
 				<img src="images/h3.jpg" alt="Reebok Shoes" />
-				<img src="images/h4.jpg" alt="Reebok Shoes" />
+				<img src="images/h4.JPG" alt="Reebok Shoes" />
 				
 			</div>
 			
